--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -44,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "@types/node-sass": "^4.11.3",
-    "node-sass": "^7.0.3"
+    "@types/node-sass": "^4.11.3"
   }
 }
